# rosbag-rs

./: Cargo.toml
src/: error.rs  msg_iter.rs
src/record_types/: chunk.rs  connection.rs
