[package]
name = "rosbag"
version = "0.3.1"
edition = "2018"
authors = ["Artyom Pavlov <newpavlov@gmail.com>", "Adrian Willenbücher <willenbuecher@xq-tec.com>"]
license = "MIT OR Apache-2.0"
description = "Utilities for reading ROS bag files."
repository = "https://github.com/xq-tec/rosbag-rs"
keywords = ["ros", "datasets", "robotics"]

[dependencies]
byteorder = "1"
log = "0.4"
hex = "0.4"
memmap = "0.7"
